Padronização de informações

--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-avaliacao-plano.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-avaliacao-plano.html
@@ -41,18 +41,21 @@
 				        <td th:text="${estagio.estagiario.curso.descricao}"></td>
 				      </tr>
 				      <tr>
+				        <td><strong>Semestre:</strong></td>
+				        <td th:text="${estagio.estagiario.semestre}"></td>
+				      </tr>
+				      <tr>
 				        <td><strong>Email:</strong></td>
 				        <td th:text="${estagio.estagiario.email}"></td>
+				      </tr>
+				      <tr>
+				      	<td><strong>Github:</strong></td>
+				      	<td th:text="${estagio.estagiario.usuarioGithub}"></td> 
 				      </tr>
 				      <tr>
 				        <td><strong>Telefone:</strong></td>
 				        <td th:text="${estagio.estagiario.telefone}"></td>
 				      </tr>
-				      <tr>
-				        <td><strong>Github:</strong></td>
-				        <td th:text="${estagio.estagiario.usuarioGithub}"></td>
-				      </tr>
-				      
 				    </tbody>
 				  </table>
 	          </div>
