--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
@@ -25,36 +25,7 @@
 	<div class="container animated fadeInRight">
 	    <div class="row">
 	      <div class="col-md-4">
-	        <div class="panel panel-bluegray">
-	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma"><i class="fa fa-caret-down" aria-hidden="true"></i> Turma NPI - 2016.1</a>
-			  </div>
-	          <div id="detalhesTurma" class="panel-body collapse in">
-				  <table class="table table-hover">
-				    <tbody>
-				      <tr>
-				        <td class="gp-sem-borda"><strong>Orientador</strong></td>
-				        <td th:text="${estagio.turma.orientador.nome}" class="gp-sem-borda"> bruno</td>
-				      </tr>
-				      <tr>
-				        <td><strong>Supervisores</strong></td>
-				     	<td  th:inline="text"> <p th:each="sup : ${estagio.turma.supervisores}"> [[${sup.nome}]]</p> </td>
-
-				      </tr>
-				      <tr>
-				        <td><strong>Período</strong></td>
-				        <td><label th:text="${estagio.turma.inicio}"></label>  a <label th:text="${estagio.turma.termino}"></label></td>
-				      </tr>
-				      <tr>
-				        <td><strong>Expediente</strong></td>
-				       	<td  th:inline="text"> <p th:each="exp : ${estagio.turma.expedientes}"> [[${exp.diaSemana}]] - [[${exp.horaInicio}]] ás [[${exp.horaTermino}]]</p> </td>
-				      </tr>
-				    </tbody>
-				  </table>
-	           </div>
-	        </div>
-	
-	        <div class="panel panel-bluegray">
+			<div class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#estagiario"><i class="fa fa-caret-down" aria-hidden="true"></i> Estagiário</a>
 			  </div>
@@ -70,26 +41,88 @@
 				        <td th:text="${estagio.estagiario.curso.descricao}"></td>
 				      </tr>
 				      <tr>
+				        <td><strong>Semestre:</strong></td>
+				        <td th:text="${estagio.estagiario.semestre}"></td>
+				      </tr>
+				      <tr>
 				        <td><strong>Email:</strong></td>
 				        <td th:text="${estagio.estagiario.email}"></td>
 				      </tr>
 				      <tr>
-				        <td><strong>Telefone:</strong></td>
-				        <td th:text="${estagio.estagiario.telefone}"></td>
+				      	<td><strong>Github:</strong></td>
+				      	<td th:text="${estagio.estagiario.usuarioGithub}"></td> 
 				      </tr>
 				      <tr>
-				        <td><strong>Github:</strong></td>
-				        <td th:text="${estagio.estagiario.usuarioGithub}"></td>
-				      </tr>
-				      
+				        <td><strong>Telefone:</strong></td>
+				        <td th:text="${estagio.estagiario.telefone}"></td>
+				      </tr>      
 				    </tbody>
 				  </table>
 	          </div>
 	        </div>
+	        <div class="panel panel-bluegray">
+	          <div class="panel-heading">
+	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma"><i class="fa fa-caret-down" aria-hidden="true"></i> Turma NPI - 2016.1</a>
+			  </div>
+	          <div id="detalhesTurma" class="panel-body collapse in">
+				  <table class="table table-hover">
+				    <tbody>
+				      <tr>
+				        <td><strong>Orientador</strong></td>
+				        <td th:text="${estagio.turma.orientador.nome}"></td>
+				      </tr>
+				      <tr>
+				        <td><strong>Supervisores</strong></td>
+				     	<td  th:inline="text"> <span th:each="sup : ${estagio.turma.supervisores}"> [[${sup.nome}]],</span></td>
+				      </tr>
+				      <tr>
+				        <td><strong>Período</strong></td>
+				        <td><label th:text="${#dates.format(estagio.turma.inicio, 'dd/MM/yyyy')}"></label>  a <label th:text="${#dates.format(estagio.turma.termino, 'dd/MM/yyyy')}"></label></td>
+				      </tr>
+				      <tr>
+				        <td><strong>Tipo</strong></td>
+				        <td th:text="${estagio.turma.tipoTurma.descricao}"></td>
+				      </tr>
+				      <tr>
+				        <td><strong>Status</strong></td>
+				        <td th:text="${estagio.turma.status.descricao}"></td>
+				      </tr>
+				    </tbody>
+				  </table>
+	           </div>
+	        </div>
 	      </div>
 
+	      <div class="col-md-8">
+	      	<div class="panel panel-bluegray">
+	          <div class="panel-heading">
+	            <a class="panel-title" data-toggle="collapse" data-target="#frequencia"><i class="fa fa-caret-down" aria-hidden="true"></i> Frequência</a>
+	          </div>
 
-	    <div class="col-md-8">
+	          <div id="frequencia" class="panel-body collapse in">
+				  <table class="table table-bordered text-center">
+					  <thead>
+					    <tr>
+					      <th>Horas estagiadas</th>
+					      <th>Presença</th>
+					      <th>Faltas</th>
+					      <th>Frequencias Pendentes</th>
+					    </tr>
+					  </thead>
+	  			    <tbody>
+				      <tr>
+				        <td>100h</td>
+				        <td>85%</td>
+				        <td>5%</td>
+				        <td>10%</td>
+				      </tr>
+				    </tbody>
+				  </table>
+				 <a href="#" class="btn btn-success btn-sm pull-right">Gerenciar</a>
+	           </div>
+	        </div>
+
+
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#avaliacaoPlano"><i class="fa fa-caret-down" aria-hidden="true"></i> Avaliação Plano</a>
@@ -155,7 +188,6 @@
 		        <a th:href="@{/Supervisor/Turma/Acompanhamento/1/AvaliarRelatorio}" class="btn btn-success btn-sm pull-right">Avaliar</a>
 	           </div>
 	        </div>
-
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#avaliacaoRendimento"><i class="fa fa-caret-down" aria-hidden="true"></i> Avaliação Rendimento</a>
@@ -241,8 +273,8 @@
 				          		
 		        <a th:href="@{/Supervisor/Turma/Acompanhamento/{idEstagio}/AvaliacaoRendimento(idEstagio=${estagio.id})}" class="btn btn-success btn-sm pull-right">Avaliar</a>
 	           </div>
-	        </div>
-	     </div>
+	           </div>
+	             </div>
 	   </div>
 	  </div>
 </section>
