--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/detalhes-turma.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/detalhes-turma.html
@@ -28,40 +28,47 @@
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma"><i class="fa fa-caret-down" aria-hidden="true"></i> Turma NPI - 2016.1</a>
-				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">editar</a>
+				<a th:href="@{'/Supervisor/Turma/' + ${turma.id} + '/Editar'}" class="btn btn-xs pull-right gp-btn-opcao">editar</a>
   			  </div>
 	          <div id="detalhesTurma" class="panel-body collapse in">
 				  <table class="table table-hover">
 				    <tbody>
 				      <tr>
 				        <td><strong>Orientador</strong></td>
-				        <td th:text="${turma.orientador.nome}"> bruno</td>
+				        <td th:text="${turma.orientador.nome}"></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Supervisores</strong></td>
 				     	<td  th:inline="text"> <span th:each="sup : ${turma.supervisores}"> [[${sup.nome}]],</span></td>
-
 				      </tr>
 				      <tr>
 				        <td><strong>Período</strong></td>
 				        <td><label th:text="${#dates.format(turma.inicio, 'dd/MM/yyyy')}"></label>  a <label th:text="${#dates.format(turma.termino, 'dd/MM/yyyy')}"></label></td>
+				      </tr>
+				      <tr>
+				        <td><strong>Tipo</strong></td>
+				        <td th:text="${turma.tipoTurma.descricao}"></td>
+				      </tr>
+				      <tr>
+				        <td><strong>Status</strong></td>
+				        <td th:text="${turma.status.descricao}"></td>
 				      </tr>
 				    </tbody>
 				  </table>
 	           </div>
 	        </div>
 	
-	        <div class="panel panel-bluegray">
+	        <div th:if="${#strings.equals(turma.tipoTurma, 'NPI')}" class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#expedienteTurma"><i class="fa fa-caret-down" aria-hidden="true"></i> Expediente da Turma</a>
-				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">adicionar</a>
+				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">Gerenciar</a>
   			  </div>
 	          <div id="expedienteTurma" class="panel-body collapse in">
 				  <table class="table table-hover">
 				    <tbody>
 				      <tr th:each="expediente : ${turma.expedientes}">
 				        <td th:inline="text"><strong>[[${expediente.diaSemana.descricao}]]</strong></td>
-				        <td th:inline="text">[[${#dates.format(expediente.horaInicio, 'HH:mm')}]] ás [[${expediente.horaTermino}]]</td>
+				        <td th:inline="text">[[${#dates.format(expediente.horaInicio, 'HH:mm')}]] ás [[${#dates.format(expediente.horaTermino, 'HH:mm')}]]</td>
 				      </tr>
 				    </tbody>
 				  </table>
@@ -93,8 +100,8 @@
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#estagiarios"><i class="fa fa-caret-down" aria-hidden="true"></i> Estagiários</a>
 				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">mapa frequência</a>
-				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">termos</a>
-				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">declarações</a>
+				<a th:if="${#strings.equals(turma.tipoTurma, 'NPI')}" href="#" class="btn btn-xs pull-right gp-btn-opcao">termos</a>
+				<a th:if="${#strings.equals(turma.tipoTurma, 'NPI')}" href="#" class="btn btn-xs pull-right gp-btn-opcao">declarações</a>
 				<a th:href="@{/Supervisor/Turma/{id}/AtualizarVinculos(id=${turma.id})}" class="btn btn-xs pull-right gp-btn-opcao">Atualizar Vínculos</a>
 	          </div>
 	          <div id="estagiarios" class="panel-body collapse in">
