--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/detalhes-turma.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/detalhes-turma.html
@@ -54,7 +54,7 @@
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#expedienteTurma"><i class="fa fa-caret-down" aria-hidden="true"></i> Expediente da Turma</a>
-				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">adicionar</a>
+				<a th:href="@{/Supervisor/Turma/{id}/Expediente(id=${turma.id})}" class="btn btn-xs pull-right gp-btn-opcao">adicionar</a>
   			  </div>
 	          <div id="expedienteTurma" class="panel-body collapse in">
 				  <table class="table table-hover">
@@ -71,7 +71,7 @@
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#eventos"><i class="fa fa-caret-down" aria-hidden="true"></i> Eventos</a>
-				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">adicionar</a>
+				<a th:href="@{/Supervisor/Turma/{id}/Evento(id=${turma.id})}" class="btn btn-xs pull-right gp-btn-opcao">adicionar</a>
 	          </div>
 
 	          <div id="eventos" class="panel-body collapse in">
