--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
@@ -39,7 +39,6 @@
 				      <tr>
 				        <td><strong>Supervisores</strong></td>
 				     	<td  th:inline="text"> <p th:each="sup : ${estagio.turma.supervisores}"> [[${sup.nome}]]</p> </td>
-
 				      </tr>
 				      <tr>
 				        <td><strong>Período</strong></td>
@@ -88,8 +87,22 @@
 	        </div>
 	      </div>
 
-
 	    <div class="col-md-8">
+	        <div class="panel panel-bluegray">
+	          <div class="panel-heading">
+	            <a class="panel-title" data-toggle="collapse" data-target="#consolidado"><i class="fa fa-caret-down" aria-hidden="true"></i> Consolidado Frequências</a>
+				<a th:href="@{/Supervisor/Turma/Acompanhamento/{id}/Frequencias(id=${estagio.id})}" class="btn btn-xs pull-right gp-btn-opcao">gerenciar</a>
+			  </div>
+	          <div id="consolidado" class="panel-body collapse in">
+	            <a href="#" class="btn btn-default disabled" role="button"><span>100h</span> <br/>Carga Horária</a>
+	            <a href="#" class="btn btn-bluegray disabled" role="button"><span>10</span> <br/>Pendências</a>
+	            <a href="#" class="btn btn-danger disabled" role="button"><span>10%</span> <br/>Faltas</a>
+	            <a href="#" class="btn btn-warning disabled" role="button"><span>4</span> <br/>Atrasos</a>
+	            <a href="#" class="btn btn-primary disabled" role="button"><span>0</span> <br/>Reposições</a>
+	            <a href="#" class="btn btn-success disabled" role="button"><span>20%</span> <br/>Presenças</a>
+	          </div>
+	        </div>
+
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#avaliacaoPlano"><i class="fa fa-caret-down" aria-hidden="true"></i> Avaliação Plano</a>
