--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/formulario-evento.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/formulario-evento.html
@@ -57,7 +57,40 @@
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#add-evento"><i class="fa fa-caret-down" aria-hidden="true"></i> Adicionar Evento</a>
 	          </div>
-	          <div id="add-evento" class="panel-body collapse in" align="center">
+	          <div id="add-evento" class="panel-body collapse in">
+					<form class="form-horizontal">
+					    <div class="form-group">
+					      <label for="inputEmail" class="col-lg-2 control-label">Titulo</label>
+					      <div class="col-lg-10">
+					        <input type="text" class="form-control" id="inputEmail" placeholder="Qual o titulo do evento?"/>
+					      </div>
+					    </div>
+					    <div class="form-group">
+					      <label for="textArea" class="col-lg-2 control-label">Descrição</label>
+					      <div class="col-lg-10">
+					        <textarea class="form-control" rows="2" id="textArea"></textarea>
+					        <span class="help-block">Descreva aqui o Evento.</span>
+					      </div>
+					    </div>
+					    <div class="form-group">
+					    	<div class="form-item">
+						      <label for="inputEmail" class="col-lg-2 control-label">Perido Evento</label>
+						      <div class="col-lg-4">
+						        <input type="text" class="form-control" id="inicio" placeholder="dd/MM/yyyy"/>
+						      </div>
+					    	</div>
+					    	<div class="form-item">
+						      <div class="col-lg-4">
+						        <input type="text" class="form-control" id="termino" placeholder="dd/MM/yyyy"/>
+						      </div>
+					    	</div>
+					    	<div class="form-item">
+						      <div class="col-lg-2">
+						        <button type="submit" class="btn btn-success">Adicionar</button>
+						      </div>
+					    	</div>
+					    </div>
+					</form>
 	           </div>
 	        </div>
 
