--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutEstagiario.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutEstagiario.html
@@ -51,6 +51,10 @@
   	<script th:src="@{/js/jquery-2.2.3.min.js}"></script>
 	<script th:src="@{/js/bootstrap.min.js}"></script>
 	<script th:src="@{/js/sweetalert-boostrap.min.js}"></script>
+	<script th:src="@{/js/jquery.mask.min.js}"></script>
+	<script th:src="@{/js/bootstrap-datepicker.js}"></script>
+	<script th:src="@{/js/bootstrap-datepicker.pt-BR.js}"></script>
+	<script th:src="@{/js/jquery.validate.min.js}"></script>
 	<script th:src="@{/js/gestao-pessoas.js}"></script>
 </body>
 </html>
