--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/formulario-expediente.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/formulario-expediente.html
@@ -53,16 +53,22 @@
 	      </div>
 
 	    <div class="col-md-8">
+	    
+	    	<div class="alert alert-dismissible alert-success" th:if="${! #strings.isEmpty(sucesso)}">
+  				<button type="button" class="close" data-dismiss="alert">&times;</button>
+  				<strong th:text="${sucesso}"></strong>
+  			</div>
+					    
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#add-expediente"><i class="fa fa-caret-down" aria-hidden="true"></i> Adicionar Expediente</a>
 	          </div>
 	          <div id="add-expediente" class="panel-body collapse in">
-					<form class="form-horizontal" th:action= "@{/Supervisor/Turma/1/Expediente}" method="post" th:object="expediente">
+					<form class="form-horizontal" th:action= "@{/Supervisor/Turma/1/Expediente}" method="post" th:object="${expediente}">
 					    <div class="form-group">
 					      <label for="diaDaSemana" class="col-lg-2 control-label">Dia da Semana</label>
 					      <div class="col-lg-10">
-					        <select class="form-control" id="dia" th:field="diaDaSemana">
+					        <select class="form-control" id="dia" th:field="*{diaSemana}">
 					          <option th:each = "dia : ${diaDaSemana}" 
 					          		  th:value="${dia}" 
 					          		  th:text = "${dia.descricao}">
@@ -70,17 +76,18 @@
 					        </select>
 					      </div>
 					    </div>
-					    <div th:class="${#fields.hasErrors('horaInicio')}? 'form-group has-error' : form-group">
-					    	<div class="form-item">
-						      <label class="col-lg-2 control-label">Horario</label>
+					    <div class="form-group">
+					    	<label class="col-lg-2 control-label">Horario</label>	
+					    	<div th:class="${#fields.hasErrors('horaInicio')}? 'form-item has-error' : form-item">
 						      <div class="col-lg-4">
-						        <input type="text" class="form-control" id="horaInicio" th:field="horaInicio" placeholder="08:00"/>
-						        <label class="control-label" th:if="${#fields.hasErrors('horaInicio')}" th:errors="*{horaInicio}">O campo E-mail tem que ser preenchido.</label>
+						        <input type="text" class="form-control" id="horaInicio" th:field="*{horaInicio}" placeholder="08:00"/>
+						        <label class="control-label" th:if="${#fields.hasErrors('horaInicio')}" th:errors="*{horaInicio}">O campo horário tem que ser preenchido.</label>
 						      </div>
 					    	</div>
-					    	<div class="form-item">
+					    	<div th:class="${#fields.hasErrors('horaTermino')}? 'form-item has-error' : form-item">
 						      <div class="col-lg-4">
-						        <input type="text" class="form-control" id="horaTermino" th:field="horaTermino" placeholder="08:00"/>
+						        <input type="text" class="form-control" id="horaTermino" th:field="*{horaTermino}" placeholder="08:00"/>
+						      	<label class="control-label" th:if="${#fields.hasErrors('horaTermino')}" th:errors="*{horaTermino}">O campo horário tem que ser preenchido.</label>
 						      </div>
 					    	</div>
 					    	<div class="form-item">
