link dos botões corrigidos

--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/editar-turma.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/editar-turma.html
@@ -142,7 +142,7 @@
 
 							<div class="form-group">
 						      <div class="col-lg-10 col-lg-offset-2">
-						        <a class="btn btn-default" th:href="@{/Supervisor/Turma/{idTurma}/Editar(idTurma=${turma.id})}">Cancelar</a>
+						        <a class="btn btn-default" th:href="@{/Supervisor/Turma/{idTurma}(idTurma=${turma.id})}">Cancelar</a>
 						        <button onclick="validaData()" type="submit" class="btn btn-success">Salvar alterações</button>
 						      </div>
 						    </div>
