--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/adicionar-turma.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/adicionar-turma.html
@@ -139,7 +139,7 @@
 
 							<div class="form-group">
 						      <div class="col-lg-10 col-lg-offset-2">
-						        <button type="reset" class="btn btn-default">Cancelar</button>
+						        <a type="reset" class="btn btn-default" th:href="@{/Supervisor/}">Cancelar</a>
 						        <button onclick="validaData()" type="submit" class="btn btn-success">Salvar</button>
 						      </div>
 						    </div>
