--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
@@ -93,6 +93,11 @@
 	        </div>
 	      </div>
 	    <div class="col-md-8">
+	    	<div class="alert alert-dismissible alert-success" th:if="${! #strings.isEmpty(sucesso)}">
+  				<button type="button" class="close" data-dismiss="alert">&times;</button>
+  				<strong th:text="${sucesso}"></strong>
+  			</div>
+	    	
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#consolidado"><i class="fa fa-caret-down" aria-hidden="true"></i> Consolidado Frequências</a>
