--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/avaliar-relatorio.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/avaliar-relatorio.html
@@ -148,7 +148,7 @@
 	   				
 	   				<div class="form-group pull-right">
 	     					<div class="col-lg-10 col-lg-offset-2">
-	       					<button type="reset" class="btn btn-default">Cancelar</button>
+	       					<button type="reset" class="btn btn-default" th:href="@{/Supervisor/Turma/Acompanhamento/{idEstagio}(idEstagio=${estagio.id})}">Cancelar</button>
 	       					<button type="submit" class="btn btn-success">Salvar</button>
 	     					</div>
 	   				</div>
